samples/_failures_safe/1761391795_febce4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_56b5e36b.c: In function ‘main’:
./samples/SAFE/__tmp_56b5e36b.c:129:5: error: expected identifier or ‘(’ at end of input
  129 |     clock_t
      |     ^~~~~~~
./samples/SAFE/__tmp_56b5e36b.c:129:5: error: expected declaration or statement at end of input
